--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3307
-DB_DATABASE=laravel_twitter_01
+DB_PORT=3306
+DB_DATABASE=twitter_0
 DB_USERNAME=root
 DB_PASSWORD=qwertyuiop
 
